# mqs

./: .dockerignore  .editorconfig  .env.dist  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile.app  Dockerfile.bench  Dockerfile.mqs  Dockerfile.service  LICENSE  Readme.md  benchmark-dev.sh  docker-compose.yml  docker-healthcheck  rustfmt.toml  swagger.yml
bench/: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
common/src/router/: mod.rs
migrations/2020-01-17-800000_create_queues/: down.sql  up.sql
mqs-bench/: Cargo.toml
mqs-cli/: Cargo.toml
mqs-cli/src/: args.rs  help.rs  lib.rs  run.rs
mqs-client/: Cargo.toml
mqs-client/src/: lib.rs
mqs-common/: Cargo.toml
mqs-common/src/: connection.rs  lib.rs  multipart.rs  server.rs  status.rs  time.rs
mqs-common/src/logger/: json.rs  mod.rs  trace_id.rs
mqs-common/src/router/: handler.rs  mod.rs
mqs-server/: Cargo.toml
mqs-server/migrations/2020-04-30-051458_add_trace_id/: down.sql  up.sql
mqs-server/src/: connection.rs  lib.rs  schema.rs  wait.rs
mqs-server/src/logger/: json.rs  mod.rs
mqs-server/src/models/: health.rs  message.rs  mod.rs  queue.rs
mqs-server/src/router/: health.rs  messages.rs  mod.rs  queues.rs
mqs-server/src/routes/: messages.rs  mod.rs  queues.rs
server/: Cargo.toml
server/migrations/2020-01-17-800000_create_queues/: down.sql
server/src/: lib.rs
server/src/logger/: json.rs
server/src/models/: message.rs
server/src/router/: mod.rs  queues.rs
server/src/routes/: messages.rs  mod.rs
src/: connection.rs  lib.rs  multipart.rs  schema.rs  status.rs  wait.rs
src/client/: mod.rs
src/logger/: connection.rs  json.rs
src/models/: health.rs  message.rs  mod.rs  queue.rs
src/router/: handler.rs  health.rs  messages.rs  mod.rs  queues.rs
src/routes/: health.rs  messages.rs  mod.rs  queues.rs
