[package]
name = "mqs"
version = "0.1.0"
authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
edition = "2018"

[dependencies.base64]
version = "0.10.1"

[dependencies.brotli]
version = "3.3.0"

[dependencies.chrono]
version = "0.4.6"
features = ["serde"]

[dependencies.deflate]
version = "0.7.20"
features = ["gzip"]

[dependencies.diesel]
version = "1.4.2"
features = ["postgres", "chrono", "network-address", "uuid"]

[dependencies.dotenv]
version = "0.13.0"

[dependencies.ipnetwork]
version = "0.13.0"

[dependencies.jsonwebtoken]
version = "5.0.1"

[dependencies.lazy_static]
version = "1.3.0"

[dependencies.log]
version = "0.4.6"

[dependencies.r2d2]
version = "0.8.4"

[dependencies.r2d2-diesel]
version = "1.0"

[dependencies.rand]
version = "0.6.5"

[dependencies.regex]
version = "1.1.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]

[dependencies.rocket]
version = "0.4.2"
default-features = false

[dependencies.sha2]
version = "0.8.0"

[dependencies.serde]
version = "1.0.90"

[dependencies.serde_derive]
version = "1.0.90"

[dependencies.serde_json]
version = "1.0.39"

[dependencies.tempfile]
version = "3.1.0"

[dependencies.uuid]
version = "0.6.5"
features = ["serde", "v4"]

[dependencies.zstd]
version = "0.4.27"

[dependencies.zstd-safe]
version = "1.4.3"

# Settings for optimal performance and longest build time
[profile.release]
opt-level = 3
debug = 2
#lto = true
#codegen-units = 1
