[package]
name = "mqs"
version = "0.1.0"
authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
edition = "2018"

[dependencies.base64]
version = "0.11.0"

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]

[dependencies.diesel]
version = "1.4.3"
features = ["postgres", "chrono", "uuid"]

[dependencies.dotenv]
version = "0.15.0"

[dependencies.log]
version = "0.4.8"

[dependencies.r2d2]
version = "0.8.8"

[dependencies.r2d2-diesel]
version = "1.0"

[dependencies.regex]
version = "1.3.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]

[dependencies.rocket]
version = "0.4.2"
default-features = false

[dependencies.sha2]
version = "0.8.1"

[dependencies.serde]
version = "1.0.104"

[dependencies.serde_derive]
version = "1.0.104"

[dependencies.serde_json]
version = "1.0.44"

[dependencies.time]
version = "0.1.42"

[dependencies.uuid]
version = "0.6.5"
features = ["serde", "v4"]

# Settings for optimal performance and longest build time
[profile.release]
opt-level = 3
debug = 2
#lto = true
#codegen-units = 1
