[package]
name = "mqs-bench"
version = "0.1.0"
authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
edition = "2018"

[dependencies.mqs-common]
path = "../mqs-common"

[dependencies.mqs-client]
path = "../mqs-client"

[dependencies.mqs-server]
path = "../mqs-server"

[dependencies.cached]
version = "0.24.0"

[dependencies.chrono]
version = "0.4.19"
features = []

[dependencies.dotenv]
version = "0.15.0"

[dependencies.hyper]
version = "=0.14.4"

[dependencies.tokio]
version = "1.9.0"
features = ["rt", "rt-multi-thread", "sync", "net", "time"]

[dependencies.log]
version = "0.4.14"

[dependencies.uuid]
version = "0.8.2"
features = ["serde", "v4"]
