[package]
name = "mqs-bench"
version = "0.1.0"
authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
edition = "2018"

[dependencies.mqs-common]
path = "../mqs-common"

[dependencies.mqs-client]
path = "../mqs-client"

[dependencies.mqs-server]
path = "../mqs-server"

[dependencies.cached]
version = "0.41.0"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.hyper]
version = "=0.14.22"

[dependencies.tokio]
version = "1.23.0"
features = ["rt", "rt-multi-thread", "sync", "net", "time", "signal"]

[dependencies.log]
version = "0.4.17"

[dependencies.uuid]
version = "1.2.2"
features = ["serde", "v4"]
