[package]
name = "mqs-client"
version = "0.1.0"
authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
edition = "2018"

[dependencies.mqs-common]
path = "../mqs-common"

[dependencies.hyper]
version = "0.13"

[dependencies.serde]
version = "1.0.106"

[dependencies.serde_json]
version = "1.0.44"

[dependencies.uuid]
version = "0.8.1"
features = ["serde", "v4"]
