[package]
name = "mqs-client"
version = "0.1.0"
authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
edition = "2018"

[dependencies.mqs-common]
path = "../mqs-common"

[dependencies.hyper]
version = "=0.14.18"
features = ["client", "http1", "http2", "runtime"]

[dependencies.serde]
version = "1.0.136"

[dependencies.serde_json]
version = "1.0.79"

[dependencies.uuid]
version = "0.8.2"
features = ["serde", "v4"]

[dependencies.tokio]
version = "1.17.0"
features = ["rt", "rt-multi-thread", "sync", "net", "time", "signal"]
