[package]
name = "mqs-common"
version = "0.1.0"
authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
edition = "2018"

[dependencies.async-trait]
version = "0.1.53"

[dependencies.cached]
version = "0.34.0"

[dependencies.diesel]
version = "1.4.8"
features = ["postgres"]
optional = true

[dependencies.dotenv]
version = "0.15.0"
optional = true

[dependencies.http]
version = "0.2.6"

[dependencies.hyper]
version = "=0.14.18"

[dependencies.log]
version = "0.4.16"

[dependencies.r2d2]
version = "0.8.9"
optional = true

[dependencies.r2d2-diesel]
version = "1.0.0"
optional = true

[dependencies.serde]
version = "1.0.136"

[dependencies.serde_derive]
version = "1.0.136"

[dependencies.serde_json]
version = "1.0.79"

[dependencies.time]
version = "0.3.9"
features = ["serde"]

[dependencies.tokio]
version = "1.17.0"
features = ["rt", "rt-multi-thread", "sync", "net", "time", "signal"]

[dependencies.uuid]
version = "0.8.2"
features = ["serde", "v4"]

[features]
server = ["dotenv", "r2d2", "r2d2-diesel"]