[package]
name = "mqs-server"
version = "0.1.0"
authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
edition = "2018"

[dependencies.mqs-common]
path = "../mqs-common"
features = ["diesel", "server"]

[dependencies.async-trait]
version = "0.1.53"

[dependencies.base64]
version = "0.13.0"

[dependencies.cached]
version = "0.34.0"

[dependencies.diesel]
version = "1.4.8"
features = ["postgres", "uuidv07"]

[dependencies.hyper]
version = "=0.14.18"
features = ["server", "http1", "http2", "runtime"]

[dependencies.tokio]
version = "1.17.0"
features = ["rt", "rt-multi-thread", "sync", "net", "time", "signal"]

[dependencies.log]
version = "0.4.16"

[dependencies.sha2]
version = "0.10.2"

[dependencies.serde]
version = "1.0.136"

[dependencies.serde_derive]
version = "1.0.136"

[dependencies.serde_json]
version = "1.0.79"

[dependencies.uuid]
version = "0.8.2"
features = ["serde", "v4"]

[dependencies.url]
version = "2.2.2"
